fix overflow

--- a/Portal/Content/Site.scss
+++ b/Portal/Content/Site.scss
@@ -9,7 +9,8 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto; 
 }
 
 .header{
